sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:16: error: not found: value x
    setValeur(x,stock)
              ^